--- a/services-staffing-solutions-manpower-company-delhi-ncr.html
+++ b/services-staffing-solutions-manpower-company-delhi-ncr.html
@@ -55,7 +55,7 @@
       <!--
         <h1 class="text-light"><a href="index.html"><span>Eterna</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/maipl_logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/MOLogo.png" alt="" class="img-fluid"></a>
       </div>
 
      <nav class="nav-menu d-none d-lg-block">
