--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="logo mr-auto">
        <!-- <h1 class="text-light"><a href="index.html"><span>Eterna</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/maipl_logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/MOLogo.png" height="150" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
