Career Spelling Chnage

--- a/skill-development-vocational-education-services.html
+++ b/skill-development-vocational-education-services.html
@@ -85,7 +85,7 @@
             </ul>
           </li>
           <li><a href="gallery.html">Gallery</a></li>
-			    <li><a href="career.html">Carrer</a></li>
+			    <li><a href="career.html">Career</a></li>
           <li><a href="contact-staffing-solutions-company-delhi-ncr.html">Contact Us</a></li>
 
         </ul>
@@ -209,7 +209,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Career</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
