--- a/catering-service-provider-company.html
+++ b/catering-service-provider-company.html
@@ -10,8 +10,7 @@
   <meta content="Corporate catering in Delhi, Corporate Catering in India, Industrial Catering in India, Industrial Catering in Delhi NCR, Catering for Educational Institutes, Catering for Skill Development Training Center in India, Catering for Skill Development Training Center in NCR" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/MOFavicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
