--- a/staffing-services-company-delhi-ncr.html
+++ b/staffing-services-company-delhi-ncr.html
@@ -10,8 +10,7 @@
   <meta content="staffing companies in Delhi, staffing companies in India, Contract Labour Supplier, Contract Labour Supplier in Delhi NCR, Payroll Services in Delhi NCR, Recruitment agency in Delhi NCR." name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/MOFavicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
