Change in group companies

--- a/group_companies_mangos.html
+++ b/group_companies_mangos.html
@@ -121,7 +121,7 @@
               <!--<img src="assets/img/blog-author.jpg" class="rounded-circle float-left" alt="">-->
               <h3>MangosOrange Services Pvt. Ltd.</h3>
               <p align="justify">
-                MangosOrange Services Private Limited is Parent company of MangosOrange Group. It deals in Staffing Solutions, Payroll Outsourcing, Contract Manpower Sourcing, Integrated Facility Management Services. This company is serving to more than 30 clients &amp; more than 12 cities in India.
+                MangosOrange Services Private Limited is Parent company of MangosOrange Group. It deals in Staffing Solutions, Payroll Outsourcing, Contract Manpower Sourcing, Integrated Facility Management Services. This company is serving to more than 100 clients &amp; more than 12 states in India.
               </p>
             </div><!-- End blog author bio -->
 
