Delete Extra Code and Update Pages

--- a/about-staffing-services-company-delhi-ncr.html
+++ b/about-staffing-services-company-delhi-ncr.html
@@ -109,7 +109,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/testimonials/offer-7.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/blog-2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>About MangosOrange Group</h3>
@@ -261,8 +261,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
-              Ghaziabad, UP - 201010<br><br>
+              <br>H-87 Sector-63 Noida U.P 201301<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
