--- a/career.html
+++ b/career.html
@@ -112,22 +112,35 @@
           <div class="row">
   
             <div class="col-lg-8">
-              <form action="contact.php" method="post" role="form" class="php-email-form">
-                <div class="form-row">
-                  <div class="col form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <div class="col form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                     <div class="validate"></div>
-                  </div>
-                  <div class="col form-group">
-                    <input type="phone" class="form-control" name="phone" id="phone" placeholder="Your Phone" data-rule="minlen:10" data-msg="Please enter valid 10 digits" />
-                    <div class="validate"></div>
-                  </div>
                 </div>
-                
-                
-                <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a Valid Email" />
-                  <div class="validate"></div>
+
+                <div class="col form-group">
+                    <input type="phone" class="form-control" name="phone" id="phone" placeholder="Enter Your Phone" data-rule="minlen:10" data-msg="Please enter valid 10 digits" />
+                    <div class="validate"></div>
+                </div>
+
+                <div class="col form-group">
+                    <input type="email" name="email" class="form-control" id="email" placeholder="Enter Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <div class="validate"></div>
+                </div>
+
+                <div class="col form-group">
+                    <input type="text" name="appliedfor" class="form-control" id="appliedfor" placeholder="Position Applied For" data-rule="minlen:4" data-msg="Please enter valid position" />
+                    <div class="validate"></div>
+                </div>
+
+                <div class="col form-group">
+                    <input type="text" name="currentlocation" class="form-control" id="currentlocation" placeholder="Enter Your Current Location" data-rule="minlen:4" data-msg="Please enter current location" />
+                    <div class="validate"></div>
+                </div>
+
+                <div class="col form-group">
+                    <input type="text" name="relocate" class="form-control" id="relocate" placeholder="Are you willing for re-locate" data-rule="minlen:4" data-msg="Please enter yes or no" />
+                    <div class="validate"></div>
                 </div>
 
                 <div class="form-group">
@@ -186,8 +199,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
-              Ghaziabad, UP - 201010<br><br>
+              <br>H-87 Sector-63 Noida U.P 201301<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
