--- a/catering-service-provider-company.html
+++ b/catering-service-provider-company.html
@@ -173,8 +173,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
-              Ghaziabad, UP - 201010<br><br>
+              <br>H-87 Sector-63 Noida U.P 201301<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
