--- a/group_companies_mangos.html
+++ b/group_companies_mangos.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Staffing Services Provider Company | MangosOrange Services Pvt. Ltd</title>
   <meta content="We are Staffing Solutions, HR Solutions, Payroll Management &amp; Recruitment agency based in Delhi NCR." name="descriptison">
   <meta content="staffing companies in Delhi, staffing companies in India, Contract Labour Supplier, Contract Labour Supplier in Delhi NCR, Payroll Services in Delhi NCR, Recruitment agency in Delhi NCR." name="keywords">
@@ -147,7 +146,7 @@
             <br><br>
 			
 			     <div class="blog-author clearfix">
-              <!--<img src="assets/img/blog-author.jpg" class="rounded-circle float-left" alt="">-->
+              
               <h3>Shokuji Foods Private Limited </h3>
               <p align="justify">
                 Shokuji Foods Private Limited is engaged in offering customized catering solutions for different locations PAN India. The company has distinguished itself as a quality Catering solution provider at cost-effective prices through a well-managed management set up.
@@ -198,8 +197,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
-              Ghaziabad, UP - 201010<br><br>
+              <br>H-87 Sector-63 Noida U.P 201301<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
