--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Mangosorange Services Pvt. Ltd.	||	Staffing Services, Manpower Supply Services, Skill Development Projects</title>
-  <meta content="We are leading multi service provider company based in Delhi NCR which deals in Staffing Services, Manpower Supply Services &amp; ." name="descriptison">
-  <meta content="Manpower Supply Services in Delhi NCR, Contract Labour Supplier, Contract Labour Supplier in Delhi NCR, Skill Development Services, Industrial Skill Services, Industrial Skill Services Provider, Consultancy services for Skill Development, Payroll Services in Delhi NCR" name="keywords">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mangosorange Services ||	Staffing Services, Manpower Supply Services, Skill Development Projects</title>
+  <meta name="description" content="We are leading multi service provider company based in Delhi NCR which deals in Staffing Services, Manpower Supply Services &amp; .">
+  <meta name="description" content="Manpower Supply Services in Delhi NCR, Contract Labour Supplier, Skill Development Services, Industrial Skill Services, Consultancy services for Skill Development, Payroll Services">
 
   <!-- Favicons -->
   <link href="assets/img/MOFavicon.png" rel="icon">
@@ -121,7 +120,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <img src="assets/img/testimonials/offer-2.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/about.jpg" class="img-fluid" alt="About MangosOrange">
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0 content">
           <h3>Welcome to MangosOrange Group</h3>
@@ -338,8 +337,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
-              Ghaziabad, UP - 201010<br><br>
+              <br>H-87 Sector-63 Noida U.P 201301<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
