--- a/work-integrated-skill-training-apprenticeship.html
+++ b/work-integrated-skill-training-apprenticeship.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Work Integrated Skill Training & Apprenticeship | Mangosorange Services Pvt. Ltd.</title>
   <meta content="We are Catering Services Provider, Contract Staffing, HR Solutions, Payroll Management &amp; Consulting Services company in the field of Skill Development based in Delhi NCR." name="descriptison">
   
@@ -202,8 +201,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
-              Ghaziabad, UP - 201010<br><br>
+              <br>H-87 Sector-63 Noida U.P 201301<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
