--- a/contact-staffing-solutions-company-delhi-ncr.html
+++ b/contact-staffing-solutions-company-delhi-ncr.html
@@ -114,7 +114,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Corp. Address</h3>
-              <p>AAG - 11, Shipra Krishna Arcade, Kaushambi, Ghaziabad, UP - 201010</p>
+              <p>H-87 Sector-63 Noida U.P 201301</p>
             </div>
           </div>
 
@@ -219,8 +219,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
-              Ghaziabad, UP - 201010<br><br>
+              <br>H-87 Sector-63 Noida U.P 201301<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
