--- a/centre-of-excellence.html
+++ b/centre-of-excellence.html
@@ -37,7 +37,7 @@
     <div class="container d-flex">
       <div class="contact-info mr-auto">
         <i class="icofont-envelope"></i><a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a>
-        <i class="icofont-phone"></i> <a href="tel:+911204567841">+91-120-4567 841</a>
+        <i class="icofont-phone"></i> <a href="tel:+911204164821">+91 120 416 4821</a>
       </div>
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
@@ -188,8 +188,8 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>H-87, Sector-63, Noida, U.P, 201301<br><br>
-              <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
+              <br>H-87, 3rd Floor, Sector-63, Noida <br>U.P. - 201301<br><br>
+              <strong>Phone:</strong> <a href="tel:+911204164821">+91 120 416 4821</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
             </p>
 
