--- a/about-staffing-services-company-delhi-ncr.html
+++ b/about-staffing-services-company-delhi-ncr.html
@@ -209,13 +209,24 @@
           <img src="assets/img/clients/client-19.png" alt="">
           <img src="assets/img/clients/client-20.png" alt="">
           <img src="assets/img/clients/client-21.png" alt="">
-          <img src="assets/img/clients/client-1.png" alt="">
-          <img src="assets/img/clients/client-3.png" alt="">
-          <img src="assets/img/clients/client-4.png" alt="">
-          <img src="assets/img/clients/client-5.png" alt="">
           <img src="assets/img/clients/client-6.png" alt="">          
-          <img src="assets/img/clients/client-8.png" alt=""> 
-          <img src="assets/img/clients/client-9.png" alt=""> 
+          <img src="assets/img/clients/client-8.png" alt="">
+          <img src="assets/img/clients/lumax-logo.png" alt="">
+          <img src="assets/img/clients/bansal-logo.jpeg" alt="">
+          <img src="assets/img/clients/balaji-logo.png" alt="">
+          <img src="assets/img/clients/revent-logo.png" alt="">
+          <img src="assets/img/clients/Sekisui-logo.png" alt="">
+          <img src="assets/img/clients/DLJM-logo.jpg" alt="">
+          <img src="assets/img/clients/Lenskart-logo.png" alt="">
+          <img src="assets/img/clients/supreme-logo.png" alt="">
+          <img src="assets/img/clients/Systemair-logo.png" alt="">
+          <img src="assets/img/clients/systra-logo.png" alt="">
+          <img src="assets/img/clients/Any-Graphics-Logo.png" alt="">
+          <img src="assets/img/clients/Aeon-logo.png" alt="">
+          <img src="assets/img/clients/vercos-logo.jpeg" alt="">
+          <img src="assets/img/clients/cgg-logo.jpeg" alt="">
+          <img src="assets/img/clients/Retein-logo.png" alt="">
+          <img src="assets/img/clients/Ibridge-logo.png" alt="">
         </div>
 
       </div>
